--- a/Content/Topics/Allocations/Size Similarity Conventions.htm
+++ b/Content/Topics/Allocations/Size Similarity Conventions.htm
@@ -16,7 +16,7 @@
         <p>The intent of similarity sets is to identify data that should be homogenized within single defined size types. Therefore, sizes outside of the chosen size type can't be chosen for the rule Display Size or for the Similar Sizes to be grouped.</p>
         <p class="Example">A new size model for Mens Short Sleeve Tees is required. The newest items in that category have the size range S, M, L, XL, and XXL, but some pre-existing items were sized with a slightly different but equivalent range – S, M, L, XL, and 2XL. Currently, Mens Short Sleeve Tees size type does not contain the new XXL size but XXL is to be the go-forward Display Size. To do this, first add XXL to the Mens Short Sleeve Tees size type, then choose it as the Display Size for the similarity set and choose both XXL and 2XL as the Similar Sizes to group.</p>
         <h2>Data migration</h2>
-        <p class="p">A job task labeled <span class="Emphasis">Size Similarity</span> homogenizes data for the Similar Sizes defined in a similarity rule. A user must have the required configuration rights to run the script.</p>
+        <p class="p">Job task <span class="Emphasis">Size Similarity</span> homogenizes data for the similar sizes defined in a similarity rule. Users must have the required configuration rights to run the script.</p>
         <table style="mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
             <thead>
                 <tr class="TableStyle-standard-Head-Header1">
