--- a/Content/Topics/Assortment Planning/Default Personal Workspace.htm
+++ b/Content/Topics/Assortment Planning/Default Personal Workspace.htm
@@ -8,7 +8,7 @@
         <p>
             <img src="../../Resources/Images/Assortment Planning/Manage Workspaces dialog.png" class="LargeImages" />
         </p>
-        <p>Select the checkbox labeled <span class="Emphasis">Default</span> on the <span class="Emphasis">Manage Workspaces</span> dialog to designate a particular workspace configuration as the default workspace. This default workspace displays  each time the application is loaded. Additionally, the default workspace can be edited and re-saved in future as needs change.</p>
+        <p>Select the <span class="Emphasis">Default</span> checkbox on the <span class="Emphasis">Manage Workspaces</span> dialog to designate a particular workspace configuration as the default workspace. This default workspace displays  each time the application is loaded. Additionally, the default workspace can be edited and re-saved in future as needs change.</p>
         <p class="BasicNote">As only private workspaces can be made default this functionality is specific to individual users only. A workspace cannot be a default if its <span class="Emphasis">Protection Type</span> is <span class="Emphasis">Public</span>.</p>
     </body>
 </html>
