--- a/Content/Topics/Assortment Planning/Style Bank.htm
+++ b/Content/Topics/Assortment Planning/Style Bank.htm
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Style Bank view</h1>
@@ -20,7 +18,7 @@
         <p>To filter the <span class="Emphasis">Style Bank</span> by any column, type in the space provided below the header. Use <var>%</var> at the beginning to do a <i>Contains</i> type filter instead of a <i>Starts With</i> filter. More complex filters are applied by clicking the <img src="../../Resources/Images/Assortment Planning/Style Bank Complex Filters.png" class="IconInline" /> icon that appears when hovering the cursor over a column header and then clicking (Custom).</p>
         <h2>Displaying only relevant variants applicable to a selected placeholder</h2>
         <p>By default, the <span class="Emphasis">Style Bank</span> view displays all variants regardless if they are within the selected product hierarchy. This can lead to a very large list to look through to find a desired style. </p>
-        <p>If selected, a View Option labeled <span class="Emphasis">Active Style Bank</span> evaluates the contents of the <span class="Emphasis">Style Bank</span> based on the currently selected row in the main planning view. This option provides a much smaller relevant list of styles that would make sense to be applied to the selected placeholder. Double-click on a variant to assign it to the selected Placeholder.</p>
+        <p>If selected, View Option <span class="Emphasis">Active Style Bank</span> evaluates the contents of the <span class="Emphasis">Style Bank</span> based on the currently selected row in the main planning view. This option provides a much smaller relevant list of styles that would make sense to be applied to the selected placeholder. Double-click on a variant to assign it to the selected Placeholder.</p>
         <h3>Placeholder view</h3>
         <p>
             <img src="../../Resources/Images/Assortment Planning/View Options dropdown.png" class="LargeImages" />
@@ -31,9 +29,7 @@
             <img src="../../Resources/Images/Assortment Planning/Active Style Bank Collection View.png" style="width: 675px;height: 205px;" class="LargeImages" />
         </p>
         <p class="BasicNote">If <span class="Emphasis">Active Style Bank</span> has been selected, then the <span class="Emphasis">PLM Code</span> field acts as a dropdown and shows the same Variants as the <span class="Emphasis">Style Bank</span> view. Alternatively, double-click a selection within the <span class="Emphasis">Style Bank</span> view. For more information, see <MadCap:xref href="Placeholder and collection view toolbar functionality.htm#AdvancedStyleBank">Advanced Style Bank</MadCap:xref>.</p>
-        <h2>
-            <a name="Assignin">
-            </a>Assigning variants</h2>
+        <h2><a name="Assignin"></a>Assigning variants</h2>
         <p>To assign a variant, drag it from the <span class="Emphasis">Style Bank</span> and drop it on the desired placeholder line. The full hierarchy path of the variant to be assigned is verified against the path of the placeholder. The cursor changes to a circle with a diagonal line through it if there is a mismatch. In this case, the variant cannot be assigned to the placeholder.</p>
         <p>Variants that have already been assigned to placeholders in the current plan are conditionally formatted for easy identification (see the above screenshot for an example of this).</p>
         <p>The same variant cannot be assigned to two placeholders within a collection. However, it is possible to assign the same variant to two placeholders in the plan as long as they are assorted to different cluster sets. This is to allow for plan seeding via multiple <span class="Emphasis">Target Creation</span> scenarios for different areas of the site hierarchy that will share the same variants.</p>
