--- a/Content/Topics/Inventory Manager/Inventory Sales History metadata group.htm
+++ b/Content/Topics/Inventory Manager/Inventory Sales History metadata group.htm
@@ -57,6 +57,6 @@ Last 3 Weeks Average Returns Revenue
                 </tr>
             </tbody>
         </table>
-        <p>Additionally, a new view labeled <span class="Emphasis">Sales History by Type - Validation</span> can be added to Inventory Manager. For more information, <MadCap:conditionalText MadCap:conditions="General.ScreenOnly">see <MadCap:xref href="../Views/Views Overview.htm">Views Overview</MadCap:xref>.</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="General.PrintOnly"> refer to the Views User Guide.</MadCap:conditionalText></p>
+        <p>Additionally, the <span class="Emphasis">Sales History by Type - Validation</span> view can be added to Inventory Manager. For more information, <MadCap:conditionalText MadCap:conditions="General.ScreenOnly">see <MadCap:xref href="../Views/Views Overview.htm">Views Overview</MadCap:xref>.</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="General.PrintOnly"> refer to the Views User Guide.</MadCap:conditionalText></p>
     </body>
 </html>
