--- a/Content/Topics/Merchandise Financial Planning/Using inventory metrics to adjust inventory levels.htm
+++ b/Content/Topics/Merchandise Financial Planning/Using inventory metrics to adjust inventory levels.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Using inventory metrics to adjust inventory levels</h1>
-        <p>Users can adjust inventory quickly and conveniently using metrics labeled <span class="Emphasis">Inventory Adjustment</span> and <span class="Emphasis">Inventory Reduction</span>. These metrics can be assigned friendly names using the <span class="Emphasis">Metric Configuration</span> configuration screen.</p>
+        <p>Users can adjust inventory quickly and conveniently using metrics <span class="Emphasis">Inventory Adjustment</span> and <span class="Emphasis">Inventory Reduction</span>. These metrics can be assigned friendly names using the <span class="Emphasis">Metric Configuration</span> configuration screen.</p>
         <p>Having separate individual metrics with user-friendly names gives greatly improved visibility to each, and better planning of AUR associated with each.</p>
         <p>
             <img src="../../Resources/Images/MFP/Inventory Metric Configuration.PNG" class="LargeImages" />
@@ -31,8 +31,7 @@
         </ol>
         <p class="BasicNote">If the plan is already open, click <span class="Emphasis">Execute</span> or press F5 to refresh the screen.</p>
         <h2>Inventory metrics</h2>
-        <p>
-            <span class="Emphasis">Inventory Adjustment 1-4</span> are identical in how they are calculated. All 4 can be given different user-friendly names and used for different adjustment scenarios.</p>
+        <p><span class="Emphasis">Inventory Adjustment 1-4</span> are identical in how they are calculated. All 4 can be given different user-friendly names and used for different adjustment scenarios.</p>
         <p>The <span class="Emphasis">Inventory Reduction 1-3</span> metrics can be used in the same way as the <span class="Emphasis">Inventory Adjustment</span> metrics.
 
 </p>
