--- a/Content/Topics/Order Manager/Working with Order Documents.htm
+++ b/Content/Topics/Order Manager/Working with Order Documents.htm
@@ -24,7 +24,7 @@
         <h2>Displaying or hiding the Column View name in a document’s caption
 
 </h2>
-        <p>A system policy labeled<span class="Emphasis"> Remove Column View Name from Document Caption</span> lets users stop the Column View name from being appended to the document name in the document’s caption. As the Column View name is important, the name is shown as a Tooltip when the system policy is set to <span class="Emphasis">True</span>.</p>
+        <p>System policy <span class="Emphasis"> Remove Column View Name from Document Caption</span> lets users stop the Column View name from being appended to the document name in the document’s caption. As the Column View name is important, the name is shown as a Tooltip when the system policy is set to <span class="Emphasis">True</span>.</p>
         <h2>Limiting the total number of columns in order documents</h2>
         <p>Order documents have a configured default column count. In addition to the default number of columns, users can add additional columns to their order documents. However, documents may become unusable if there are too many columns. To prevent this, system policy <span class="Emphasis">Column Max</span> allows for limiting the total number of columns  that can be included in an order document. </p>
         <p>For example, if <span class="Emphasis">Column Max</span> is set to 100 (the default), then users can have a maximum of 100 columns beyond the default column count.</p>
