--- a/Content/Topics/Price Planning/Adding new site clusters to a Pricing Plan.htm
+++ b/Content/Topics/Price Planning/Adding new site clusters to a Pricing Plan.htm
@@ -21,7 +21,7 @@
             <li>
                 <p>Click the dropdown arrow in the Site filter field to choose a set of sites.</p>
             </li>
-            <li>Optionally, to return a subset of sites from the Site filter, select the checkbox labeled <span class="Emphasis">Select only some Sites from the current filter</span>.<ol><li><p>On the <span class="Emphasis">Site Selection</span> dialog, select the checkboxes for the sites to be added.</p><p class="BasicNote"> Only those sites meeting the filter criteria and not already associated to the pricing plan’s pre-configured site clusters display.</p></li><li>Click <span class="Emphasis">Ok</span>.</li></ol></li>
+            <li>Optionally, to return a subset of sites from the Site filter, select the <span class="Emphasis">Select only some Sites from the current filter</span> checkbox.<ol><li><p>On the <span class="Emphasis">Site Selection</span> dialog, select the checkboxes for the sites to be added.</p><p class="BasicNote"> Only those sites meeting the filter criteria and not already associated to the pricing plan’s pre-configured site clusters display.</p></li><li>Click <span class="Emphasis">Ok</span>.</li></ol></li>
             <li>Click <span class="Emphasis">Ok</span> on the <span class="Emphasis">New Pricing Site Cluster</span> dialog.</li>
             <li>
                 <p>Click <span class="Emphasis">Ok</span> on the following confirmation dialog.</p>
