--- a/Content/Topics/Price Planning/Cloning Price Actions.htm
+++ b/Content/Topics/Price Planning/Cloning Price Actions.htm
@@ -51,24 +51,24 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Strategy</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The original price action strategy.
-                        <ul><li><p>If not modified, the Strategy Variable values are copied and any lower level exception overrides.</p></li><li><p>If modified, the system will not copy over the Strategy Variable values nor any lower level exception overrides.</p></li></ul></td>
+                        <ul><li><p>If not modified, the Strategy Variable values are copied and any lower level exception overrides.</p></li><li><p>If modified, the Strategy Variable values are not copied over nor any lower level exception overrides.</p></li></ul></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Workflow</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The original price action workflow. The system applies the first status for the selected workflow.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The original price action workflow. The first status for the selected workflow is applied.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Variant</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The system applies the selected variants from the original price action. Additionally, the system applies any product exclusions across all levels.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The selected variants from the original price action are applied. Plus any product exclusions across all levels.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Site Clusters</td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">The system displays the selected Site Clusters from the original price action. If a Cluster is added, that was previously not included, then the system applies the default Strategy values for the appropriate currency.</td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">The selected site clusters from the original price action display. If a cluster is added, that was previously not included, then the default Strategy values for the appropriate currency are applied.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Price Matrix</td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                         Optional. If the plan is configured to use a Price Matrix, then this field allows the Price Matrix to be changed or removed from a price action. 
+                         Optional. If the plan is configured to use a price matrix, then this field allows the matrix to be changed or removed from a price action. 
                         <p class="BasicNote">This field displays if system policy <span class="Emphasis">Default Pricing Plan Price Matrix Usage</span> is set to <span class="Emphasis">True</span>.</p></td>
                 </tr>
             </tbody>
