--- a/Content/Topics/Assortment Planning/Automatically Ingesting External Data Into Plans.htm
+++ b/Content/Topics/Assortment Planning/Automatically Ingesting External Data Into Plans.htm
@@ -4,6 +4,6 @@
     </head>
     <body>
         <h1>Automatically ingesting external data into plans</h1>
-        <p>External data can be ingested automatically into an Assortment plan. A standard weekly job labeled <span class="Emphasis">(AP) (Weekly) Refresh External-Sourced Plans</span> automatically updates external data eliminating the need to run the update manually. The job should be configured to run at least weekly at any point after Imports run. If external data is imported daily, then the job should be run daily as well.</p>
+        <p>External data can be ingested automatically into an Assortment plan. Standard weekly job <span class="Emphasis">(AP) (Weekly) Refresh External-Sourced Plans</span> automatically updates external data eliminating the need to run the update manually. This job should be configured to run at least weekly at any point after Imports run. If external data is imported daily, then the job should be run daily as well.</p>
     </body>
 </html>
