--- a/Content/Topics/Assortment Planning/Health Error Codes.htm
+++ b/Content/Topics/Assortment Planning/Health Error Codes.htm
@@ -24,12 +24,12 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Actualized Sales Greater than Total</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">The Total Sales metric is less than the Actualized Sales metric. Since Total Sales represents the lifetime of the item, adding Actualized Sales and Future Sales together, Total Sales should always be the greater number. This circumstance would only occur if there were some unexpected data condition (like extremely negative sales values in actualized data); there are many defenses in the application to prevent this from happening.</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">The Total Sales metric is less than the Actualized Sales metric. Since Total Sales represents the lifetime of the item, adding Actualized Sales and Future Sales together, Total Sales should always be the greater number. This circumstance only occurs if there were some unexpected data condition (like extremely negative sales values in actualized data); there are many defenses in the application to prevent this from happening.</td>
                     <td class="TableStyle-standard-BodyD-Column1-Body1">Modify Total Sales to be greater than Actualized Sales, and Save. The Actualized Sales and Total Sales values can exactly match (and these values should match after the item has phased out), but there can be conflicts if entering in the exact Actualized Sales value into Total Sales and there are unrounded decimals not visible in the screen, so the value should be increased by 1.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Cluster Zero Site Count</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">There are periods in the sales plan where there are no sites for the cluster set / cluster. This occurred because the cluster set snapshot active for the period contains no sites, or all of the sites in the cluster have been marked as closed. A sales, receipt, and inventory plan cannot exist where there are no sites.</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">There are periods in the sales plan where there are no sites for the cluster set / cluster. This occurs because the cluster set snapshot active for the period contains no sites, or all of the sites in the cluster have been marked as closed. A sales, receipt, and inventory plan cannot exist where there are no sites.</td>
                     <td class="TableStyle-standard-BodyD-Column1-Body1">There are multiple actions to take to resolve this error. Reevaluate the cluster set snapshots over time, ensuring that all clusters have the right membership of sites. Reevaluate site status information, ensuring at least one site is open for each period of time during the life of the placeholder. If the cluster is truly meant to have no sites for some time (because, for example, a cluster has been removed or added), then change the AP plan to exclude the time where the cluster doesn't exist. This can be done by changing phase dates of the placeholder to not include the periods where the cluster is empty, or un-assorting from the cluster altogether using the Cluster Details pane.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -39,7 +39,7 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Markdown Period Longer Than Expiration Period</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">This error would occur if a very long markdown period was configured. In particular, there is an error if there is a Markdown set on an item with no Phase Out date, or if the Markdown period is longer than the Data Expiration period (a system policy). A Markdown phase this long is unexpected in AP data.</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">This error occurs if a very long markdown period was configured. In particular, there is an error if there is a Markdown set on an item with no Phase Out date, or if the Markdown period is longer than the Data Expiration period (a system policy). A Markdown phase this long is unexpected in AP data.</td>
                     <td class="TableStyle-standard-BodyD-Column1-Body1">Remove the Markdown date, or set the Markdown date closer to phase out. Note that Markdown Dates should not be set for placeholders with no phase out date; in other words, the placeholder cannot be on markdown indefinitely.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -54,12 +54,12 @@
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">No Selling Periods</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">The sales plan for this placeholder has no active selling periods. This would occur if the user manually toggled Selling Period to "off" for all periods, or the system set Selling Period to "off" for all periods if there are no sites in the cluster.</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">The sales plan for this placeholder has no active selling periods. This occurs if the user manually toggled Selling Period to "off" for all periods, or the system set Selling Period to "off" for all periods if there are no sites in the cluster.</td>
                     <td class="TableStyle-standard-BodyD-Column1-Body1">Depending on the desired outcome for the user, several actions could be taken. If all periods were opted out in error, then the user should opt some periods back in as selling. If the periods are marked as non-selling due to having no sites in the cluster, then actions should be taken to correct cluster definitions (see the Cluster Zero Site Count error). If the item is meant to not be in phase yet, set the phase dates accordingly. If the placeholder should never be sold for the cluster, rather than opting out each period individually, the assortment should be removed using the Cluster Details pane.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Period Horizon Past Calendar</td>
-                    <td class="TableStyle-standard-BodyE-Column2-Body1">In order for AP to function properly, a calendar extending into the future must be defined. This error will be surfaced if the defined calendar does not extend far enough into the future for placeholders with no phase out date. Placeholders with no phase out date have sales plans extended to the Period Horizon configured for the plan. If the calendar does not have periods defined at least that far out, then there is a conflict.</td>
+                    <td class="TableStyle-standard-BodyE-Column2-Body1">In order for AP to function properly, a calendar extending into the future must be defined. This error surfaces if the defined calendar does not extend far enough into the future for placeholders with no phase out date. Placeholders with no phase out date have sales plans extended to the Period Horizon configured for the plan. If the calendar does not have periods defined at least that far out, then there is a conflict.</td>
                     <td class="TableStyle-standard-BodyD-Column1-Body1">The best thing to do is to run maintenance or imports to add more future periods into the calendar. In the short term, the placeholders with no phase out can have phase out set temporarily to the last defined period in the calendar until the calendar is extended.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -87,7 +87,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Missing Data In Price Matrix</td>
                     <td class="TableStyle-standard-BodyB-Column2-Body1">
-                         If a Price Matrix is set for a placeholder, then the system will attempt to use the Price Matrix data to convert AUT values. If any of the following components are missing, the error displays: 
+                         If a Price Matrix is set for a placeholder, then the system attempts to use the Price Matrix data to convert AUT values. If any of the following components are missing, the error displays: 
                         <ul><li><p>an entry in the matrix for the home site's country / currency</p></li><li><p>an entry in the matrix for the selling sites' country / currencies</p></li><li><p>a row in the matrix for the starting <span class="Emphasis">Home AUT</span> value</p></li><li><p>currency conversion data for converting non-Home currency values back to the home currency</p></li></ul></td>
                     <td class="TableStyle-standard-BodyA-Column1-Body1">Assign a different price matrix, or ensure the price matrix is defined for all countries, currencies, and AUT values.</td>
                 </tr>
