--- a/Content/Topics/Forecast Definition/Modes and methods in forecasting.htm
+++ b/Content/Topics/Forecast Definition/Modes and methods in forecasting.htm
@@ -9,7 +9,7 @@
         <p>The classification of forecasting methods can be broken down into two distinct groupings. The group called&#160;<span class="Emphasis">averaging methods</span>&#160;conform to the conventional understanding of what an average is, namely, equally weighted observations. </p>
         <p>The second group of methods applies an unequal set of weights to past data and because the weights typically decay in an exponential manner from the most recent to the most distant data point, the methods are known as&#160;<span class="Emphasis">exponential smoothing&#160;methods</span>. </p>
         <p>In addition to these two types of forecasting methods the system uses linear regression and intermittent demand. </p>
-        <p class="BasicNote">There is a system default forecasting method labeled <span class="Emphasis">system default</span>. The system default method is a moving average that takes into account as many points as are available. It is not user configurable and is designed to return a result regardless.</p>
+        <p class="BasicNote">The system default forecasting method <span class="Emphasis">system default</span> is a moving average that takes into account as many points as are available. It is not user configurable and is designed to return a result regardless.</p>
         <MadCap:miniTocProxy style="mc-toc-depth: 1;" />
     </body>
 </html>
