--- a/Content/Topics/Promotion Management/Sync Promotion screen.htm
+++ b/Content/Topics/Promotion Management/Sync Promotion screen.htm
@@ -3,9 +3,9 @@
     <head />
     <body>
         <h1>Syncing promotions</h1>
-        <p>Demand forecasting accuracy can be improved by defining a planned lift factor by cluster set and having those values pushed to the Causals import API. This is achieved by selecting the button labeled <span class="Emphasis">Sync</span> located on the toolbar. Selecting this button displays the <span class="Emphasis">Sync Promotion</span> dialog in which the override lift value as a percentage can be entered. </p>
+        <p>Demand forecasting accuracy can be improved by defining a planned lift factor by cluster set and having those values pushed to the Causals import API. This is achieved by selecting the <span class="Emphasis">Sync</span> button located on the toolbar. Selecting this button displays the <span class="Emphasis">Sync Promotion</span> dialog in which the override lift value as a percentage can be entered. </p>
         <p>Right-click in the <span class="Emphasis">Override Lift</span> column and choose the option labeled <span class="Emphasis">Multiple Changes</span> to update multiple rows simultaneously.</p>
-        <p class="BasicNote">The user right <span class="Emphasis">Allow access to Sync</span> (Right Group: Promotions)  is required to access this functionality.</p>
+        <p class="BasicNote">User right <span class="Emphasis">Allow access to Sync</span> (Right Group: Promotions)  is required to access this functionality.</p>
         <p>
             <img src="../../Resources/Images/Promotion Management/Sync Promotion screen.png" class="LargeImages" />
         </p>
